# langbatch

./: .gitignore  CNAME  README.md  mkdocs.yml  pyproject.toml
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/community/: index.html
0.1.1/concepts/: index.html
0.1.1/extra/: style.css
0.1.1/getstarted/: index.html
0.1.1/howtos/: index.html
0.1.1/references/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
0.1.2/community/: index.html
0.1.2/concepts/: index.html
0.1.2/extra/: style.css
0.1.2/getstarted/: index.html
0.1.2/howtos/: index.html
0.1.2/references/: index.html
0.1.2/search/: search_index.json
docs/: index.md
docs/community/: index.md
docs/concepts/: index.md
docs/extra/: style.css
docs/getstarted/: batch.md  index.md  install.md
docs/howtos/: batch_dispatcher_service.md  batch_dispatcher_service_redis.md  index.md
docs/references/: Batch.md  ChatCompletion.md  Embedding.md  index.md
langbatch/: Batch.py  BatchDispatcher.py  BatchHandler.py  ChatCompletionBatch.py  EmbeddingBatch.py  OpenAIBatch.py  __init__.py  anthropic.py  batch_dispatching.py  batch_processing.py  batch_queues.py  batch_storages.py  bedrock.py  bigquery_utils.py  claude_utils.py  errors.py  factory.py  nova_utils.py  openai.py  openai_batches.py  record.proto  record_llama.proto  record_llama_pb2.py  request_queues.py  schemas.py  utils.py  vertex.py  vertexai.py
tests/: check_chat_batch.ipynb  check_embedding_batch.ipynb
tests/data/: chat_completion_batch.jsonl  chat_completion_batch_bedrock.jsonl  chat_completion_batch_invalid.jsonl  chat_completion_batch_llama.jsonl  chat_completion_batch_results.jsonl  chat_completion_partial_requests.jsonl  embedding_batch.jsonl  embedding_batch_invalid.jsonl  (+3 more)
(+105 files in other folders)
