[tool.poetry]
name = "langbatch"
version = "0.1.0"
description = ""
authors = ["KarthikeyanVijayanEasyLLM <karthikeyan.vijayan@easyllm.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.43.0"
jsonlines = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
